Update generated code using latest OpenAPI generator and API specification
